# ed25519

./: CMakeLists.txt  license.txt  links.txt  python.c  readme.md  setup.py  test.py  test2.py
src/: CMakeLists.txt  add_scalar.c  ed25519.h  hash.c  hash.h  keypair.c  pyapi.c  pyapi.h  sign.c  verify.c
test/: CMakeLists.txt  basic.py  example.c  example.py  key_exchange.py  sign.py  sign_custom_hash.py  test.c  threads.py
